--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ body {
     border: none;
     cursor: pointer;
   }
+  .editing{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
   
   /* Style boxes and items */
   .box {
@@ -83,6 +88,24 @@ body {
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  @keyframes myAnimation{
+    0%{
+      opacity: 1;
+    }
+    50%{
+      opacity: 0.5;
+    }
+    100%{
+      display: none;
+      opacity: 0;
+    }
+  }
+  
+  #noResultsPopup{
+      animation-name: myAnimation;
+      animation-duration: 2000ms;
+      animation-fill-mode: forwards;
   }
 
   
